<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_constraint"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background_transaction_dialog">

        <TextView
            android:id="@+id/transaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/transaction_title"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date"
            android:textSize="16sp"
            android:textColor="@color/colorReallyLightGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_title"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20, June 2018"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_title"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_time"
            android:textSize="16sp"
            android:textColor="@color/colorReallyLightGrey"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_title"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:28 AM"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_title"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_merchant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_merchant"
            android:textSize="16sp"
            android:textColor="@color/colorReallyLightGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            android:layout_marginTop="48dp"/>

        <TextView
            android:id="@+id/tv_merchant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Java Coffee House"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_merchant_title"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_merchant_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:src="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tv_time"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_amount"
            android:textSize="16sp"
            android:textColor="@color/colorReallyLightGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_merchant"
            android:layout_marginTop="36dp"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   -"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_title"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"/>

        <RelativeLayout
            android:id="@+id/layout_payment"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_roundedrectange">

            <ImageView
                android:id="@+id/mpesa_logo"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:src="@drawable/mpesa"/>

            <TextView
                android:id="@+id/payment_title"
                android:text="Payment Method"
                android:layout_alignStart="@+id/mpesa_logo"
                android:layout_marginStart="72dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/payment_method"
                android:text="mPesa"
                android:textColor="@color/colorReallyLightGrey"
                android:layout_alignTop="@+id/payment_title"
                android:layout_alignStart="@+id/mpesa_logo"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>