<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/civ_store_avator"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="96dp"-->
        <!--android:src="@drawable/profilepic"/>-->

    <ImageView
        android:id="@+id/iv_store_avator"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp"
        android:src="@drawable/avatarcircleblue"/>

    <TextView
        android:id="@+id/store_name"
        android:textSize="20sp"
        android:text="@string/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorReallyLightGrey"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/iv_store_avator"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sent_time"
        android:text="@string/store_sent_time"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLightGrey"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:layout_below="@+id/store_name"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/rate"
        android:text="@string/rate_your_experience"
        android:textSize="20sp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sent_time"/>

    <RelativeLayout
        android:id="@+id/emojis"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@+id/rate">

        <ImageView
            android:id="@+id/angry"
            android:src="@drawable/angry"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:contentDescription="emoji"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/iv_bluecircle_angry"
            android:src="@drawable/circle"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:contentDescription="emoji"
            android:layout_below="@+id/angry"
            android:visibility="invisible"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/sad"
            android:src="@drawable/sad"
            android:layout_marginTop="12dp"
            android:layout_marginStart="64dp"
            android:layout_alignStart="@+id/angry"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="emoji"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/iv_bluecircle_sad"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="64dp"
            android:layout_below="@+id/sad"
            android:layout_alignStart="@+id/iv_bluecircle_angry"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="emoji"
            android:visibility="invisible"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/neutral"
            android:src="@drawable/neutral"
            android:layout_marginTop="12dp"
            android:layout_marginStart="128dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="emoji"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/iv_bluecircle_neutral"
            android:src="@drawable/circle"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="64dp"
            android:layout_below="@+id/neutral"
            android:layout_alignStart="@+id/iv_bluecircle_sad"
            android:contentDescription="emoji"
            android:visibility="invisible"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/happy"
            android:src="@drawable/happy"
            android:layout_marginTop="12dp"
            android:layout_marginStart="192dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="emoji"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/iv_bluecircle_happy"
            android:src="@drawable/circle"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="64dp"
            android:layout_alignStart="@+id/iv_bluecircle_neutral"
            android:layout_below="@+id/happy"
            android:contentDescription="emoji"
            android:visibility="invisible"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/veryhappy"
            android:src="@drawable/veryhappy"
            android:layout_marginTop="12dp"
            android:layout_marginStart="256dp"
            android:contentDescription="emoji"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>


        <ImageView
            android:id="@+id/iv_bluecircle_veryhappy"
            android:src="@drawable/circle"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="64dp"
            android:layout_alignStart="@+id/iv_bluecircle_happy"
            android:layout_below="@+id/veryhappy"
            android:contentDescription="emoji"
            android:visibility="invisible"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/etfeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        style="@style/MyEditText"
        android:textSize="20sp"
        android:hint="@string/tellussomething"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="bottom"
        android:text="@string/submit_btn"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/colorPrimary"/>

</RelativeLayout>